feat: add appId memory isolation (#344)
